added documentation. added test that matches documentation